fix: disable scrollbar on firefox

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,10 @@
     color: var(--text);
 }
 
+html {
+    scrollbar-width: none;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
